--- a/cabinets/cabinets.Android/cabinets.Android.csproj
+++ b/cabinets/cabinets.Android/cabinets.Android.csproj
@@ -118,5 +118,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\pic_cabinet.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pic_cabinet2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pic_cabinet3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pic_news.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
