--- a/src/cabinets.Core/cabinets.Core.csproj
+++ b/src/cabinets.Core/cabinets.Core.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="MvvmCross.Forms" Version="6.4.2" />
     <PackageReference Include="Realm" Version="4.2.0" />
     <PackageReference Include="Rg.Plugins.Popup" Version="1.2.0.223" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.142-pre1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.4.0-pre2" />
     <PackageReference Include="XamForms.Controls.Calendar" Version="1.1.1" />
