--- a/src/cabinets.Core/cabinets.Core.csproj
+++ b/src/cabinets.Core/cabinets.Core.csproj
@@ -22,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="ContentViews\CarouselContentView.xaml.cs">
+      <DependentUpon>CarouselContentView.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Pages\NoSavePopupPage.xaml.cs">
       <DependentUpon>NoSavePopupPage.xaml</DependentUpon>
     </Compile>
@@ -31,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="ContentViews\CarouselContenView.xaml">
+    <EmbeddedResource Update="ContentViews\CarouselContentView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="ContentViews\EditContentView.xaml">
