--- a/src/cabinets.Core/cabinets.Core.csproj
+++ b/src/cabinets.Core/cabinets.Core.csproj
@@ -52,10 +52,10 @@
     <EmbeddedResource Update="Pages\Cabinets\CabinetsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Pages\CalendarPage.xaml">
+    <EmbeddedResource Update="Pages\Calendar\CalendarPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Pages\DayPage.xaml">
+    <EmbeddedResource Update="Pages\Calendar\DayPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Pages\Profile\MyBookingPage.xaml">
