добавлен шрифт, мелкие правки по дизайну

--- a/src/cabinets.Android/cabinets.Android.csproj
+++ b/src/cabinets.Android/cabinets.Android.csproj
@@ -85,6 +85,8 @@
     <Compile Include="Setup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\Lato-Regular.ttf" />
+    <AndroidAsset Include="Assets\Lato-Bold.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
