--- a/src/cabinets.Android/Properties/AndroidManifest.xml
+++ b/src/cabinets.Android/Properties/AndroidManifest.xml
@@ -2,6 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="0.5"
           package="com.itmit.cabinets.app" android:installLocation="internalOnly">
   <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
-  <application android:label="Психологическая студия" android:usesCleartextTraffic="true" android:icon="@mipmap/icon"></application>
+  <application android:label="Психологическая студия" android:usesCleartextTraffic="true" android:icon="@mipmap/icon">
+    <receiver
+      android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver"
+      android:exported="false" />
+    <receiver
+      android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver"
+      android:exported="true"
+      android:permission="com.google.android.c2dm.permission.SEND">
+      <intent-filter>
+        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+        <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+        <category android:name="${applicationId}" />
+      </intent-filter>
+    </receiver>
+  </application>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
