--- a/src/cabinets.Android/cabinets.Android.csproj
+++ b/src/cabinets.Android/cabinets.Android.csproj
@@ -90,6 +90,7 @@
     <Compile Include="FormsActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SubscribeTopicFireBase.cs" />
     <Compile Include="Setup.cs" />
   </ItemGroup>
   <ItemGroup>
