--- a/src/cabinets.iOS/Info.plist
+++ b/src/cabinets.iOS/Info.plist
@@ -53,5 +53,16 @@
 	<string>Camera usage description</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Photo usage description</string>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeDescription</key>
+			<string>UTI Declaration 1</string>
+		</dict>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
