--- a/src/cabinets.iOS/Info.plist
+++ b/src/cabinets.iOS/Info.plist
@@ -20,15 +20,13 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string>8.0</string>
+	<string>8.1</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.itmit.cabinets</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.0.0</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-	<key>CFBundleName</key>
-	<string>cabinets</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcons.appiconset</string>
 	<key>CFBundleDisplayName</key>
@@ -47,5 +45,19 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0.0</string>
+	<key>CFBundleName</key>
+	<string>Arendapsy</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Calendar usage description</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera usage description</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo usage description</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Location usage description</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location usage description</string>
 </dict>
 </plist>
