:ios::bug: calendar

--- a/src/cabinets.Core/cabinets.Core.csproj
+++ b/src/cabinets.Core/cabinets.Core.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.379-pre1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.1" />
+    <PackageReference Include="Xamarin.Plugin.Calendar" Version="1.1.1002" />
     <PackageReference Include="XamForms.Controls.Calendar" Version="1.1.1" />
   </ItemGroup>
 
