--- a/src/cabinets.Core/cabinets.Core.csproj
+++ b/src/cabinets.Core/cabinets.Core.csproj
@@ -33,8 +33,8 @@
     <Compile Update="Pages\Auth\RecoveryPage.xaml.cs">
       <DependentUpon>RecoveryPage.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Pages\Auth\SendEmailPage.xaml.cs">
-      <DependentUpon>SendEmailPage.xaml</DependentUpon>
+    <Compile Update="Pages\Auth\SendRecoveryCodePage.xaml.cs">
+      <DependentUpon>SendRecoveryCodePage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\BookingLayout.xaml.cs">
       <DependentUpon>BookingLayout.xaml</DependentUpon>
@@ -51,7 +51,7 @@
     <EmbeddedResource Update="Pages\Auth\AuthorizationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Pages\Auth\SendEmailPage.xaml">
+    <EmbeddedResource Update="Pages\Auth\SendRecoveryCodePage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Pages\Auth\RecoveryPage.xaml">
